components/Menu/styles.module.css
.menu {
	position: fixed;
	top: 1rem;
	right: 5%;
	z-index: 1;
}

.menuBar {
	position: fixed;
	right: 5%;
	z-index: 100;
}

.mobileMenuContainer {
	position: fixed;
	z-index: 1;
	top: 0;
	height: 68px;
	display: flex;
	justify-content: space-between;
	justify-items: flex-end;
}

.blogBtn {
	color: inherit;
	text-decoration: underline 0.15em rgba(255, 255, 255, 0);
	border-bottom: 1px solid transparent;
	border-right: 1px solid transparent;
	transition: text-decoration-color 300ms !important;
	background-color: transparent !important;
	box-shadow: none !important;
}

.blogBtn:hover,
.blogBtn:focus,
.blogBtn:active {
	text-decoration-color: #97dffc;
	background-color: transparent;
}

.blogBtn.dark:hover,
.blogBtn.dark:focus,
.blogBtn.dark:active {
	text-decoration-color: #121212;
}

